objects/snapshot__c.object
<CustomObject>
    <fields>
        <fullName>APIusageSummary_Day_Of_Week__c</fullName>
        <description>Corresponds to Day of Week in APIusage report</description>
        <label>APIusageSummary_Day Of Week</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avg__c</fullName>
        <description>Corresponds to avg value snapshot report</description>
        <label>avg</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>max__c</fullName>
        <description>Corresponds to max value in a snapshot report</description>
        <label>max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>noOfRecords__c</fullName>
        <description>Corresponds to number of records in a snapshot report</description>
        <label>no.OfRecords</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>snapshot_Execution_Time__c</fullName>
        <description>Corresponds to timestamp of when the snapshot was taken</description>
        <label>snapshot Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sum__c</fullName>
        <description>Corresponds to sum of value in a snapshot report</description>
        <label>sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>userID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Corresponds to UserID in a snapshot report</description>
        <label>userID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <description>Corresponds to username in a snapshot report</description>
        <label>username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <description>Used to take snapshot of objects</description>
    <label>snapshot</label>
    <nameField>
        <label>snapshot</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>